@@ -1,153 +1,205 @@
-#!/bin/bash
+#!/usr/bin/env bash
 
 #
-# Script to create installers
+# Script to create installers for various platforms.
 #
 
 cd $(dirname $0)
 
+usage () {
+  echo "Usage: $0 VERSION [PLATFORM]"
+  echo "Build Traccar installers."
+  echo
+  echo "Without PLATFORM provided, builds installers for all platforms."
+  echo
+  echo "Available platforms:"
+  echo " * linux-64"
+  echo " * linux-arm"
+  echo " * linux-arm64"
+  echo " * windows-64"
+  echo " * other"
+  exit 1
+}
+
 if [[ $# -lt 1 ]]
 then
-  echo "USAGE: $0 <version>"
-  exit 1
+  usage
 fi
 
+info () {
+  echo -e "[\033[1;34mINFO\033[0m] "$1
+}
+
+ok () {
+  echo -e "[\033[1;32m OK \033[0m] "$1
+}
+
+warn () {
+  echo -e "[\033[1;31mWARN\033[0m] "$1
+}
+
 VERSION=$1
+PLATFORM=${2:-all}
+PREREQ=true
 
 check_requirement () {
-  if ! eval $1 &>/dev/null
+  if ! eval $2 &>/dev/null
   then
-    echo $2
-    exit 1
-  fi 
-}
-
-check_requirement "ls ../../ext-6.2.0" "Missing ../../ext-6.2.0 (https://www.sencha.com/legal/GPL/)"
-check_requirement "ls yajsw-*.zip" "Missing yajsw-*.zip (https://sourceforge.net/projects/yajsw/files/)"
-check_requirement "ls innosetup-*.exe" "Missing isetup-*.exe (http://www.jrsoftware.org/isdl.php)"
-check_requirement "which sencha" "Missing sencha cmd package (https://www.sencha.com/products/extjs/cmd-download/)"
-check_requirement "which wine" "Missing wine package"
-check_requirement "which innoextract" "Missing innoextract package"
-check_requirement "which makeself" "Missing makeself package"
-check_requirement "which dos2unix" "Missing dos2unix package"
-
-prepare () {
-  unzip yajsw-*.zip
-  mv yajsw-*/ yajsw/
-
-  ../traccar-web/tools/minify.sh
-
-  innoextract innosetup-*.exe
-  echo "If you got any errors here try isetup version 5.5.5 (or check supported versions using 'innoextract -v')"
-}
-
-cleanup () {
-  rm -r yajsw/
-
-  rm ../traccar-web/web/app.min.js
-
-  rm -r app/
-}
-
-copy_wrapper () {
-  cp yajsw/$1/setenv* out/$1
-  cp yajsw/$1/wrapper* out/$1
-  cp yajsw/$1/install* out/$1
-  cp yajsw/$1/start* out/$1
-  cp yajsw/$1/stop* out/$1
-  cp yajsw/$1/uninstall* out/$1
-
-  chmod +x out/$1/*
-
-  cp yajsw/conf/wrapper.conf.default out/conf
-
-  touch out/conf/wrapper.conf
-  echo "wrapper.java.command=java" >> out/conf/wrapper.conf
-  echo "wrapper.java.app.jar=tracker-server.jar" >> out/conf/wrapper.conf
-  echo "wrapper.app.parameter.1=./conf/traccar.xml" >> out/conf/wrapper.conf
-  echo "wrapper.java.additional.1=-Dfile.encoding=UTF-8" >> out/conf/wrapper.conf
-  echo "wrapper.logfile=logs/wrapper.log.YYYYMMDD" >> out/conf/wrapper.conf
-  echo "wrapper.logfile.rollmode=DATE" >> out/conf/wrapper.conf
-  echo "wrapper.ntservice.name=traccar" >> out/conf/wrapper.conf
-  echo "wrapper.ntservice.displayname=Traccar" >> out/conf/wrapper.conf
-  echo "wrapper.ntservice.description=Traccar" >> out/conf/wrapper.conf
-  echo "wrapper.daemon.run_level_dir=\${if (new File('/etc/rc0.d').exists()) return '/etc/rcX.d' else return '/etc/init.d/rcX.d'}" >> out/conf/wrapper.conf
-
-  cp -r yajsw/lib/* out/lib
-  find out/lib -type f -name ReadMe.txt -exec rm -f {} \;
-
-  cp yajsw/templates/* out/templates
-
-  cp yajsw/wrapper*.jar out
-
-  if which xattr &>/dev/null
-  then
-    xattr -dr com.apple.quarantine out
+	warn "$3"
+	PREREQ=false
+  else
+	ok "$@"
   fi
 }
 
-copy_files () {
+info "Checking build requirements for platform: "$PLATFORM
+check_requirement "Traccar server archive" "ls ../target/tracker-server.jar" "Missing traccar archive"
+check_requirement "Zip" "which zip" "Missing zip binary"
+check_requirement "Unzip" "which unzip" "Missing unzip binary"
+if [ $PLATFORM != "other" ]; then
+  check_requirement "Jlink" "which jlink" "Missing jlink binary"
+fi
+if [ $PLATFORM = "all" -o $PLATFORM = "windows-64" ]; then
+  check_requirement "Inno Extractor" "which innoextract" "Missing innoextract binary"
+  check_requirement "Inno Setup" "ls i*setup-*.exe" "Missing Inno Setup (http://www.jrsoftware.org/isdl.php)"
+  check_requirement "Windows 64 Java" "ls OpenJDK*64_windows*.zip" "Missing Windows 64 JDK (https://adoptium.net/)"
+  check_requirement "Wine" "which wine" "Missing wine binary"
+fi
+if [ $PLATFORM = "all" -o $PLATFORM = "linux-64" -o $PLATFORM = "linux-arm" -o $PLATFORM = "linux-arm64" ]; then
+  check_requirement "Makeself" "which makeself" "Missing makeself binary"
+fi
+if [ $PLATFORM = "all" -o $PLATFORM = "linux-64" ]; then
+  check_requirement "Linux 64 Java" "ls OpenJDK*x64_linux*.tar.gz" "Missing Linux 64 JDK (https://adoptium.net/)"
+fi
+if [ $PLATFORM = "all" -o $PLATFORM = "linux-arm" ]; then
+  check_requirement "Linux ARM Java" "ls OpenJDK*arm_linux*.tar.gz" "Missing Linux ARM JDK (https://adoptium.net/)"
+fi
+if [ $PLATFORM = "all" -o $PLATFORM = "linux-arm64" ]; then
+  check_requirement "Linux ARM 64 Java" "ls OpenJDK*aarch64_linux*.tar.gz" "Missing Linux ARM 64 JDK (https://adoptium.net/)"
+fi
+if [ $PREREQ = false ]; then
+  info "Missing build requirements, aborting..."
+  exit 1
+else
+  info "Building..."
+fi
+
+prepare () {
+  mkdir -p out/{conf,data,lib,logs,legacy,modern,schema,templates}
+
   cp ../target/tracker-server.jar out
   cp ../target/lib/* out/lib
   cp ../schema/* out/schema
   cp -r ../templates/* out/templates
-  cp -r ../traccar-web/web/* out/web
+  cp -r ../traccar-web/web/* out/legacy
+  cp -r ../traccar-web/modern/build/* out/modern
   cp default.xml out/conf
   cp traccar.xml out/conf
+
+  if [ $PLATFORM = "all" -o $PLATFORM = "windows-64" ]; then
+	innoextract i*setup-*.exe >/dev/null
+	info "If you got any errors here try Inno Setup version 5.5.5 (or check supported versions using 'innoextract -v')"
+  fi
+}
+
+cleanup () {
+  info "Cleanup"
+  rm -r out
+  if [ $PLATFORM = "all" -o $PLATFORM = "windows-64" ]; then
+	rm -r tmp
+	rm -r app
+  fi
+}
+
+package_other () {
+  info "Building Zip archive"
+  cp README.txt out
+  cd out
+  zip -q -r ../traccar-other-$VERSION.zip *
+  cd ..
+  rm out/README.txt
+  ok "Created Zip archive"
 }
 
 package_windows () {
-  mkdir -p out/{bat,conf,data,lib,logs,web,schema,templates}
-
-  copy_wrapper "bat"
-  copy_files
-
-  wine app/ISCC.exe traccar.iss
-
-  zip -j traccar-windows-$VERSION.zip Output/traccar-setup.exe README.txt
-
+  info "Building Windows 64 installer"
+  unzip -q OpenJDK*64_windows*.zip
+  jlink --module-path jdk-*/jmods --add-modules java.se,jdk.charsets,jdk.crypto.ec,jdk.unsupported --output out/jre
+  rm -rf jdk-*
+  wine app/ISCC.exe traccar.iss >/dev/null
+  rm -rf out/jre
+  zip -q -j traccar-windows-64-$VERSION.zip Output/traccar-setup.exe README.txt
   rm -r Output
-  rm -r tmp
-  rm -r out
+  ok "Created Windows 64 installer"
 }
 
-package_unix () {
-  mkdir -p out/{bin,conf,data,lib,logs,web,schema,templates}
-
-  copy_wrapper "bin"
-  find out -type f \( -name \*.sh -o -name \*.vm \) -print0 | xargs -0 dos2unix
-  copy_files
-
-  cp java-test/test.jar out
+package_linux () {
   cp setup.sh out
-  makeself --notemp out traccar.run "traccar" ./setup.sh
+  cp traccar.service out
 
-  zip -j traccar-linux-$VERSION.zip traccar.run README.txt
-  cp traccar-linux-$VERSION.zip traccar-macos-$VERSION.zip
+  tar -xf OpenJDK*$2_linux*.tar.gz
+  jlink --module-path jdk-*/jmods --add-modules java.se,jdk.charsets,jdk.crypto.ec,jdk.unsupported --output out/jre
+  rm -rf jdk-*
+  makeself --needroot --quiet --notemp out traccar.run "traccar" ./setup.sh
+  rm -rf out/jre
+
+  zip -q -j traccar-linux-$1-$VERSION.zip traccar.run README.txt
 
   rm traccar.run
-  rm -r out
+  rm out/setup.sh
+  rm out/traccar.service
 }
 
-package_universal () {
-  mkdir -p out/{conf,data,lib,logs,web,schema,templates}
+package_linux_64 () {
+  info "Building Linux 64 installer"
+  package_linux 64 x64
+  ok "Created Linux 64 installer"
+}
 
-  copy_files
+package_linux_arm () {
+  info "Building Linux ARM installer"
+  package_linux arm arm
+  ok "Created Linux ARM installer"
+}
 
-  cp README.txt out
-  cp other/traccar.sh out
-  
-  cd out
-  zip -r ../traccar-other-$VERSION.zip *
-  cd ..
-
-  rm -rf out/
+package_linux_arm64 () {
+  info "Building Linux ARM 64 installer"
+  package_linux arm64 aarch64
+  ok "Created Linux ARM 64 installer"
 }
 
 prepare
 
-package_windows
-package_unix
-package_universal
+case $PLATFORM in
+  all)
+	package_linux_64
+	package_linux_arm
+	package_linux_arm64
+	package_windows
+	package_other
+	;;
+
+  linux-64)
+	package_linux_64
+	;;
+
+  linux-arm)
+	package_linux_arm
+	;;
+
+  linux-arm64)
+	package_linux_arm64
+	;;
+
+  windows-64)
+	package_windows
+	;;
+
+  other)
+	package_other
+	;;
+esac
 
 cleanup
+
+ok "Done"
